--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     }
 
     /* Header styles */
-    header {
-      background-color: #005f99; /* Strong blue background */
-      color: white;
-      padding: 20px 10%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-    }
+header {
+  background-color: #4169E1; /* Royal Blue */
+  color: white;
+  padding: 20px 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
     /* Background pattern styles */
     .background-pattern {
@@ -1282,7 +1281,7 @@ body {
         <div>
           <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
         </div>
-        <h2>Meta Data Analyst Certification</h2>
+        <h2>Meta Certified Data Analyst</h2>
         <p>
           I am proud to share that I’ve earned the <strong>Meta Data Analyst Certification</strong> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
         </p>
@@ -1292,11 +1291,11 @@ body {
         <div>
           <img src="https://www.datacamp.com/logo.png" alt="DataCamp Logo" />
         </div>
-        <h2>DataCamp Data Analyst Associate</h2>
+        <h2>DataCamp Certified Data Analyst Associate</h2>
         <p>
           Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
         </p>
-        <a href="https://www.datacamp.com/certificate/DAA0012924736719" target="_blank" class="btn">View Certification</a>
+        <a href="https://github.com/yenugah80/portfolio_website/raw/main/DA%20Associate%20-%20Twitter%20-%20Post.png" target="_blank" class="btn">View Certification</a>
       </div>
     </div>
   </div>
