--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,7 @@ body {
         <p>
           Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
         </p>
-        <a href="https://github.com/yenugah80/portfolio_website/raw/main/DA%20Associate%20-%20Twitter%20-%20Post.png" target="_blank" class="btn">View Certification</a>
+        <a href="https://www.datacamp.com/img/datacamp-logo.png" target="_blank" class="btn">View Certification</a>
       </div>
     </div>
   </div>
