--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@ header {
 }
 
     /* Background pattern styles */
-    .background-pattern {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle, #ffffff40 1px, transparent 1px),
-                  linear-gradient(transparent, transparent 4px);
-      background-size: 20px 20px;
-      pointer-events: none;
-    }
+.background-pattern {
+    position: fixed; /* Change to fixed */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, #ffffff40 1px, transparent 1px),
+                linear-gradient(transparent, transparent 4px);
+    background-size: 20px 20px;
+    pointer-events: none;
+    z-index: -1; /* Add this line to ensure it stays behind other content */
+}
 
     /* Welcome note styling */
      .logo h1 {
