--- a/index.html
+++ b/index.html
@@ -1286,17 +1286,16 @@ body {
         </p>
         <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
       </div>
-      <div class="datacamp-cert-card">
-        <div>
-          <img src="https://www.datacamp.com/logo.png" alt="DataCamp Logo" />
-        </div>
-        <h2>DataCamp Certified Data Analyst Associate</h2>
-        <p>
-          Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
-        </p>
-        <a href="https://www.datacamp.com/img/datacamp-logo.png" target="_blank" class="btn">View Certification</a>
-      </div>
-    </div>
+<div class="card">
+  <div class="card-front">
+    <img src="https://www.datacamp.com/logo.png" alt="DataCamp Logo" />
+    <h2>DataCamp Certified Data Analyst Associate</h2>
+    <p>
+      Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
+    </p>
+    <a href="https://www.datacamp.com/certificate/DAA0012924736719" target="_blank" class="btn">View Certification</a>
+  </div>
+</div>
   </div>
 </section>
 
