--- a/index.html
+++ b/index.html
@@ -1275,20 +1275,21 @@ body {
     <p class="text-center text-xl font-semibold text-gray-300 mb-8">
       There are so many certifications here, you might want to grab a snack and settle in — it's a journey through the many courses and knowledge I’ve picked up along the way. Ready? Let’s dive into my education adventure! 🌟
     </p>
-    <div class="cert-card-container">
-      <div class="meta-cert-card">
-        <div>
-          <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
-        </div>
-        <h2>Meta Certified Data Analyst</h2>
-        <p>
-          I am proud to share that I’ve earned the <strong>Meta Data Analyst Certification</strong> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
-        </p>
-        <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
-      </div>
-<div class="card">
-  <div class="card-front">
-    <img src="https://www.datacamp.com/logo.png" alt="DataCamp Logo" />
+<div class="cert-card-container">
+  <div class="meta-cert-card">
+    <div>
+      <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
+    </div>
+    <h2>Meta Certified Data Analyst</h2>
+    <p>
+      I am proud to share that I’ve earned the <strong>Meta Data Analyst Certification</strong> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
+    </p>
+    <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
+  </div>
+  <div class="data-camp-card">
+    <div>
+      <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="DataCamp Logo" />
+    </div>
     <h2>DataCamp Certified Data Analyst Associate</h2>
     <p>
       Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
@@ -1300,29 +1301,43 @@ body {
 </section>
 
 <style>
-  .cert-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 50px;
-  }
+ .cert-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+}
 
-  .meta-cert-card, .datacamp-cert-card {
-    background: #fff;
-    border-radius: 20px;
-    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-    width: 45%;
-    max-width: 600px;
-    padding: 30px;
-    text-align: center;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  }
+.meta-cert-card, .data-camp-card {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 300px;
+  text-align: center;
+}
 
-  .meta-cert-card:hover, .datacamp-cert-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
-  }
+.meta-cert-card img, .data-camp-card img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.meta-cert-card .btn, .data-camp-card .btn {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #1695cc;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.meta-cert-card .btn:hover, .data-camp-card .btn:hover {
+  background-color: #ffb400;
+}
 
   .meta-cert-card img, .datacamp-cert-card img {
     max-width: 120px;
