--- a/index.html
+++ b/index.html
@@ -1275,132 +1275,150 @@ body {
     <p class="text-center text-xl font-semibold text-gray-300 mb-8">
       There are so many certifications here, you might want to grab a snack and settle in — it's a journey through the many courses and knowledge I’ve picked up along the way. Ready? Let’s dive into my education adventure! 🌟
     </p>
-<div class="cert-card-container">
-  <div class="meta-cert-card">
-    <div>
-      <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Certification Cards</title>
+    <style>
+        /* Container to center the certification cards */
+        .cert-card-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            flex-wrap: wrap;
+            margin-top: 50px;
+        }
+
+        /* Styling for the certification cards */
+        .cert-card {
+            background: #fff;
+            border-radius: 20px;
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 500px;
+            padding: 30px;
+            text-align: center;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+
+        .cert-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
+        }
+
+        .cert-card img {
+            max-width: 120px;
+            width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .cert-card:hover img {
+            transform: scale(1.1);
+        }
+
+        .cert-card h2 {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 10px;
+            transition: color 0.3s ease-in-out;
+        }
+
+        .cert-card p {
+            font-size: 1.1rem;
+            color: #666;
+            line-height: 1.5;
+            margin-bottom: 20px;
+        }
+
+        .btn {
+            padding: 12px 25px;
+            font-size: 1.1rem;
+            border-radius: 25px;
+            text-decoration: none;
+            color: white;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            display: inline-block;
+        }
+
+        .btn:hover {
+            transform: scale(1.05);
+        }
+
+        .btn:active {
+            transform: scale(0.95);
+        }
+
+        .meta-btn {
+            background-color: #007BFF;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .meta-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .datacamp-btn {
+            background-color: #3BA55D;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .datacamp-btn:hover {
+            background-color: #2D8C4E;
+        }
+
+        @media (max-width: 768px) {
+            .cert-card {
+                padding: 20px;
+            }
+
+            .cert-card h2 {
+                font-size: 1.5rem;
+            }
+
+            .cert-card p {
+                font-size: 1rem;
+            }
+
+            .btn {
+                font-size: 1rem;
+                padding: 10px 20px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Certification Card Container -->
+    <div class="cert-card-container">
+        <!-- Meta Certification Card -->
+        <div class="cert-card">
+            <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
+            <h2>Meta Data Analyst Certification</h2>
+            <p>
+                I am proud to share that I’ve earned the <b>Meta Data Analyst Certification</b> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
+            </p>
+            <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn meta-btn">View Certification</a>
+        </div>
+
+        <!-- DataCamp Certification Card -->
+        <div class="cert-card">
+            <img src="https://cdn6.aptoide.com/imgs/3/d/2/3d2a4e5b8524611096460865bb2d64af_fgraphic.jpg" alt="DataCamp Logo" />
+            <h2>DataCamp Certified Data Analyst Associate</h2>
+            <p>
+                Excited to announce that I have earned the <b>DataCamp Certified Data Analyst Associate</b> certification! This certification validates my expertise in data analysis, visualization, and SQL.
+            </p>
+            <a href="https://www.datacamp.com/certificate/DAA0012924736719" target="_blank" class="btn datacamp-btn">View Certification</a>
+        </div>
     </div>
-    <h2>Meta Certified Data Analyst</h2>
-    <p>
-      I am proud to share that I’ve earned the <strong>Meta Data Analyst Certification</strong> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
-    </p>
-    <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
-  </div>
-  <div class="data-camp-card">
-    <div>
-      <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="DataCamp Logo" />
-    </div>
-    <h2>DataCamp Certified Data Analyst Associate</h2>
-    <p>
-      Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
-    </p>
-    <a href="https://www.datacamp.com/certificate/DAA0012924736719" target="_blank" class="btn">View Certification</a>
-  </div>
-</div>
-  </div>
-</section>
 
-<style>
- .cert-card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 50px;
-}
+</body>
+</html>
 
-.meta-cert-card, .data-camp-card {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  width: 300px;
-  text-align: center;
-}
-
-.meta-cert-card img, .data-camp-card img {
-  width: 100px;
-  height: auto;
-  margin-bottom: 20px;
-}
-
-.meta-cert-card .btn, .data-camp-card .btn {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #1695cc;
-  color: white;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.meta-cert-card .btn:hover, .data-camp-card .btn:hover {
-  background-color: #ffb400;
-}
-
-  .meta-cert-card img, .datacamp-cert-card img {
-    max-width: 120px;
-    width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .meta-cert-card:hover img, .datacamp-cert-card:hover img {
-    transform: scale(1.1);
-  }
-
-  .meta-cert-card h2, .datacamp-cert-card h2 {
-    font-size: 2rem;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
-    transition: color 0.3s ease-in-out;
-  }
-
-  .meta-cert-card:hover h2, .datacamp-cert-card:hover h2 {
-    color: #007BFF;
-  }
-
-  .meta-cert-card p, .datacamp-cert-card p {
-    font-size: 1.1rem;
-    color: #666;
-    line-height: 1.5;
-    margin-bottom: 20px;
-    transition: color 0.3s ease-in-out;
-  }
-
-  .meta-cert-card:hover p, .datacamp-cert-card:hover p {
-    color: #555;
-  }
-
-  .btn {
-    padding: 15px 30px;
-    background-color: #007BFF;
-    color: white;
-    font-size: 1.2rem;
-    border-radius: 25px;
-    text-decoration: none;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-
-  .btn:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
-  }
-
-  .btn:active {
-    transform: scale(0.95);
-  }
-
-  @media (max-width: 768px) {
-    .meta-cert-card, .datacamp-cert-card {
-      width: 90%;
-    }
-  }
-</style>
 
     <div class="Certifications-container">
       <section id="datacamp-certifications" style="padding: 50px; background-color: #f9f9f9;">
