--- a/index.html
+++ b/index.html
@@ -1242,6 +1242,9 @@ body {
             <li><i class="fas fa-sync-alt"></i> Agile/Scrum</li>
             <li><i class="fas fa-clipboard-list"></i> Jira, Kanban</li>
             <li><i class="fas fa-cogs"></i> Workflow Optimization</li>
+             <li><i class="fas fa-chart-line"></i> Lean Techniques</li>
+            <li><i class="fas fa-project-diagram"></i> Six Sigma Techniques</li>
+
           </ul>
         </div>
       </div>
@@ -1293,7 +1296,7 @@ body {
 
         /* Styling for the certification cards */
         .cert-card {
-            background: #fff;
+            background: #f8f9fa;
             border-radius: 20px;
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
             width: 90%;
@@ -1339,7 +1342,7 @@ body {
             padding: 12px 25px;
             font-size: 1.1rem;
             border-radius: 25px;
-            text-decoration: none;
+            text-decoration: underline;
             color: white;
             transition: background-color 0.3s ease, transform 0.3s ease;
             display: inline-block;
@@ -1355,7 +1358,6 @@ body {
 
         .meta-btn {
             background-color: #007BFF;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
         }
 
         .meta-btn:hover {
@@ -1364,7 +1366,6 @@ body {
 
         .datacamp-btn {
             background-color: #3BA55D;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
         }
 
         .datacamp-btn:hover {
@@ -1398,9 +1399,9 @@ body {
         <!-- Meta Certification Card -->
         <div class="cert-card">
             <img src="https://res.cloudinary.com/dzouosbkb/image/upload/v1738041036/ffbh7ga5bxurrjhz6c8u.png" alt="Meta Logo" />
-            <h2>Meta Data Analyst Certification</h2>
+            <h2>Meta Certified Data Analyst</h2>
             <p>
-                I am proud to share that I’ve earned the <b>Meta Data Analyst Certification</b> from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
+                I am proud to share that I’ve earned the <b>Meta Certified Data Analyst</b> certification from Coursera! This certification covers advanced data analysis techniques and provides valuable insights for effective data management.
             </p>
             <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn meta-btn">View Certification</a>
         </div>
@@ -1418,7 +1419,6 @@ body {
 
 </body>
 </html>
-
 
     <div class="Certifications-container">
       <section id="datacamp-certifications" style="padding: 50px; background-color: #f9f9f9;">
