--- a/index.html
+++ b/index.html
@@ -5,123 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Harika Yenuga's Portfolio</title>
   <style>
-  /* Reset and basic styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    /* Header styles */
-header {
-  background-color: #002366; /* Dark Royal Blue */
-  color: white;
-  padding: 20px 10%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-    /* Background pattern styles */
-.background-pattern {
-    position: fixed; /* Change to fixed */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle, #ffffff40 1px, transparent 1px),
-                linear-gradient(transparent, transparent 4px);
-    background-size: 20px 20px;
-    pointer-events: none;
-    z-index: -1; /* Add this line to ensure it stays behind other content */
-}
-
-    /* Welcome note styling */
-     .logo h1 {
-      font-size: 2rem; /* Bold and large */
-      font-weight: 700;
-      white-space: nowrap;
-    }
-
-
-    /* Navigation styling */
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      z-index: 1;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: white;
-      font-size: 1.2rem;
-      font-weight: 600;
-      transition: color 0.3s ease, transform 0.2s ease;
-    }
-
-    nav ul li a:hover {
-      color: #ffcc00; /* Golden hover effect */
-      transform: scale(1.1); /* Slight zoom effect */
-    }
-    /* About Section */
-    #about-me-features {
-      padding: 40px 10%;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-
-    #about-me-features h2 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-
-    #about-me-features p {
-      font-size: 1.2rem;
-    }
-
-    /* Profile Section */
-    .profile-container {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-
-    .profile-img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .typing-text h2 {
-      font-size: 1.8rem;
-    }
-
-     /* Responsive styles */
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav ul {
-        flex-direction: column;
-        gap: 10px;
-        margin-top: 10px;
-      }
-
-      nav ul li a {
-        font-size: 1.2rem; /* Larger font size for smaller devices */
-      }
-    }
 /* General Reset */
 * {
   margin: 0;
@@ -457,7 +340,130 @@ body {
       </ul>
     </nav>
   </header>
+<style>
+  /* Reset and basic styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    /* Header styles */
+    header {
+      background-color: #002366; /* Dark Royal Blue */
+      color: white;
+      padding: 20px 10%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      position: relative;
+      z-index: 2;
+    }
+
+    /* Background pattern styles */
+    .background-pattern {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle, #ffffff40 1px, transparent 1px),
+                  linear-gradient(transparent, transparent 4px);
+      background-size: 20px 20px;
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    /* Welcome note styling */
+    .logo h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      white-space: nowrap;
+      margin-bottom: 10px;
+    }
+
+    /* Navigation styling */
+    nav ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      z-index: 1;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: white;
+      font-size: 1.2rem;
+      font-weight: 600;
+      transition: color 0.3s ease, transform 0.2s ease;
+    }
+
+    nav ul li a:hover {
+      color: #ffcc00; /* Golden hover effect */
+      transform: scale(1.1); /* Slight zoom effect */
+    }
+
+    /* About Section */
+    #about-me-features {
+      padding: 40px 10%;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    #about-me-features h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    #about-me-features p {
+      font-size: 1.2rem;
+    }
+
+    /* Profile Section */
+    .profile-container {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .typing-text h2 {
+      font-size: 1.8rem;
+    }
+
+    /* Responsive styles */
+    @media (max-width: 768px) {
+      header {
+        padding: 15px 5%;
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+      }
+
+      nav ul li a {
+        font-size: 1rem; /* Adjusted font size for better readability on small screens */
+      }
+    }
+</style>
   <!-- About Section -->
   <section id="about-me-features" class="about-section">
     <div class="container">
