--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: center;
+      text-align: flex;
       position: relative;
       z-index: 2;
     }
