--- a/index.html
+++ b/index.html
@@ -352,32 +352,42 @@ body {
       font-family: Arial, sans-serif;
     }
 
-    /* Header styles */
-    header {
-      background-color: #002366; /* Dark Royal Blue */
-      color: white;
-      padding: 20px 10%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: flex;
-      position: relative;
-      z-index: 2;
-    }
+   /* Header styles */
+header {
+  background-color: #002366; /* Dark Royal Blue */
+  color: white;
+  padding: 20px 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  z-index: 2;
+}
 
-    /* Background pattern styles */
-    .background-pattern {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle, #ffffff40 1px, transparent 1px),
-                  linear-gradient(transparent, transparent 4px);
-      background-size: 20px 20px;
-      pointer-events: none;
-      z-index: -1;
-    }
+/* Background pattern styles */
+.background-pattern {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, #ffffff40 1px, transparent 1px),
+              linear-gradient(transparent, transparent 4px);
+  background-size: 20px 20px;
+  pointer-events: none;
+  z-index: -1;
+}
+
+header .logo {
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+header nav ul {
+  display: flex;
+  justify-content: center;
+  gap: 20px; /* Adjust as needed */
+}
 
     /* Welcome note styling */
     .logo h1 {
