--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ body {
       font-family: Arial, sans-serif;
     }
 
-   /* Header styles */
+ /* Header styles */
 header {
   background-color: #002366; /* Dark Royal Blue */
   color: white;
@@ -360,7 +360,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  text-align: center; /* Corrected from 'flex' to 'center' */
   position: relative;
   z-index: 2;
 }
