--- a/index.html
+++ b/index.html
@@ -61,7 +61,83 @@ body {
   background-color: #f7f7f7;
   color: #333;
 }
+header {
+      background-color: #112c6e;
+      color: rgb(252, 209, 209);
+      padding: 20px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
+    header .logo h1 {
+      font-size: 2rem;
+      margin-bottom: 5px;
+    }
+
+    header .logo p {
+      font-size: 1rem;
+      opacity: 0.7;
+    }
+
+    header nav ul {
+      list-style: none;
+      display: flex;
+      margin-right: 30px;
+    }
+
+    header nav ul li {
+      margin-left: 30px;
+      position: relative;
+    }
+
+    header nav ul li a {
+      text-decoration: none;
+      color: rgb(238, 194, 194);
+      font-size: 1.1rem;
+      padding: 10px;
+      position: relative;
+      transition: color 0.3s;
+    }
+
+    header nav ul li a:hover {
+      color: #85f197;
+    }
+
+    header nav ul li a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background-color: #f88322;
+      transform: scaleX(0);
+      transition: transform 0.3s ease-in-out;
+    }
+
+    header nav ul li a:hover::after {
+      transform: scaleX(1);
+    }
+
+    section {
+      padding: 80px 20px;
+      text-align: center;
+      margin-bottom: 60px;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      color: #820bb9;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
 
 
 /* Section Styling */
@@ -1925,7 +2001,7 @@ body {
         color: #333;
     }
 
-    #sap-sas-certifications {
+        #sap-sas-certifications {
         background-color: #f7f7f7;
         padding: 50px;
         border-radius: 10px;
