--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ body {
   </style>
 </section>
 
-<section id="career-highlights" style="padding: 4rem; background: linear-gradient(135deg, #6eabe7, #185c7c, #021529); border-radius: 10px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">
+<section id="career-highlights" style="padding: 4rem; background: linear-gradient(135deg, #003366, #708090, #008080, #B0C4DE, #556B2F ); border-radius: 10px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">
   <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 2rem; color: #f074c0; animation: fadeIn 2s ease-in-out, gradientChange 5s infinite, pulse 2s infinite;">CAREER HIGHLIGHTS</h2>
 
   <style>
