--- a/index.html
+++ b/index.html
@@ -400,14 +400,14 @@ body {
 </head>
 <body>
   <!-- Header Section -->
-<header class="header-center">
-    <div class="background-pattern"></div>
+  <header>
     <div class="logo">
-      <h1>Welcome to My Portfolio TechSavys!!!</h1>
+      <h1>Welcome to My Portfolio Tech Savys!!!!</h1>
+      <p style="text-align: center;">
     </div>
     <nav>
       <ul>
-        <li><a href="#about-me-features">About Me</a></li>
+        <li><a href="#about">About Me</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#career-highlights">Career Highlights</a></li>
